@@ -6,6 +6,7 @@ import javax.net.ssl.HttpsURLConnection;
 import java.io.*;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.stream.Collectors;
 
 @SuppressWarnings("unused")
 public class DownloadSourceChecker {
@@ -45,7 +46,7 @@ public class DownloadSourceChecker {
         }
         final File file = new File(f.getAbsolutePath() + ":Zone.Identifier:$DATA");
         try (BufferedReader bf = new BufferedReader(new FileReader(file))) {
-            for (String line : bf.lines().toList()) {
+            for (String line : bf.lines().collect(Collectors.toList())) {
                 if (line.contains("HostUrl=")) {
                     for (final String s : trustedSources) {
                         if (line.contains(s)) return true;
